tests/fails/missing_data.rs
use shakespeare::actor;

#[actor]
mod actor {
	fn foo() {}
}

fn main() {}
